# libmodelfile

./: .cvsignore  .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  libmd3-0.2.pc.in  libmodelfile.spec.in  libmodelfile.vcproj  sphere.md3
libcolladadae/: Makefile.am  parser.c  parser.h  structure.h
libcolladadae/tests/: Makefile.am  dumpdae.c
libmd3/: .cvsignore  Makefile.am  convert.c  convert.h  endian.c  endian.h  inttypes.h  libmd3.c  loader.c  loader.h  mesh.h  structure.h
scripts/: run_coverage_tests.sh
tests/: .cvsignore  Makefile.am  checksizes.c  dumpmd3.c  rendermd3.c
